# unifi-protect-backup

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  README.md  mkdocs.yml
.cargo/: audit.toml
.sqlx/: query-050930163524b7a72df31dd9d1373b1569faffb58624d5b52a2f8e8d2eba720e.json  query-439c71b20570d9eb9936bdbdcea6639cf5306fca5b850ea1e88e3dbec4be750c.json  query-520301297697874c5ab7affd11ba613bac714eeba759b1b147be6ed50dc5a4ef.json  query-5acae99f1451a144ed92e1057c69f43198bba069c06926a12ef6ea1a61444cf7.json  query-7d4bf31012484e8f9e2fd1e49994cc4f1852121be6da02f8bf00e996e12e7a1a.json  query-80a1fb075963859c84d3dc18a7a5de0772d80a064b8e96420a4cc533fee05cd8.json  query-8433d9b1fcfb89b2fb5515947e0a589d95cb08678bd67c26c7752058cedddc0c.json  query-ea4cd030acef152d9f13464647b5d27090b2a3c6217f45db68e2863ce8d17024.json
crates/unifi-protect-backup/: Cargo.toml
crates/unifi-protect-backup/src/: config.rs  context.rs  convert.rs  error.rs  lib.rs  logging.rs  main.rs  metrics.rs
crates/unifi-protect-backup/src/archive/: borg.rs  mod.rs
crates/unifi-protect-backup/src/backup/: borg.rs  local.rs  mod.rs  rclone.rs
crates/unifi-protect-backup/src/database/: mod.rs
crates/unifi-protect-backup/src/opentelemetry/: logging.rs  mod.rs  tracing.rs
crates/unifi-protect-backup/src/snapshots/: unifi_protect_backup__metrics__tests__metrics.snap
crates/unifi-protect-backup/src/task/: archiver.rs  db_poller.rs  mod.rs  pruner.rs  unifi_event_listener.rs
crates/unifi-protect-backup/src/task/unifi_event_listener/: mod.rs
crates/unifi-protect-backup/src/tasks/: mod.rs
crates/unifi-protect-backup/src/tasks/db_poller/: mod.rs
crates/unifi-protect-backup/src/tasks/unifi_event_listener/: mod.rs
crates/unifi-protect-client/: Cargo.toml
crates/unifi-protect-client/src/: config.rs  error.rs  events.rs  lib.rs  models.rs
crates/unifi-protect-data/: Cargo.toml
crates/unifi-protect-data/migrations/: 20250708112624_create_initial_database_structure.sql
crates/unifi-protect-data/src/: error.rs  lib.rs
docs/: architecture.md  configuration.md  index.md  installation.md  quickstart.md  usage.md
src/: lib.rs  main.rs
src/api/: mod.rs
src/backup/: mod.rs
src/config/: mod.rs
src/database/: mod.rs
src/events/: mod.rs
