[workspace]
members = ["crates/*"]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
async-trait = "0.1.88"

base64 = "0.22"
chrono = "0.4"
clap = "4.0"
futures-util = "0.3"
humantime-serde = "1.1.1"
native-tls = "0.2.14"
opentelemetry = "0.30"
opentelemetry-otlp = "0.30"
opentelemetry_sdk = "0.30"
reqwest = "0.12.22"
serde = "1.0"
serde_json = "1.0"
sqlx = "0.8.6"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = "1.0"
tokio-tungstenite = "0.27.0"
toml = "0.8.23"
tracing = "0.1"
tracing-core = "0.1.34"
tracing-loki = "0.2"
tracing-opentelemetry = "0.31"
tracing-subscriber = "0.3"
unifi-protect-client = { path = "./crates/unifi-protect-client" }
unifi-protect-data = { path = "./crates/unifi-protect-data" }
uuid = "1.0"
