[package]
name = "unifi-protect-backup"
version.workspace = true
edition.workspace = true
authors = ["Steve Sampson <mail@stephensampson.dev>"]
description = "Rust-based UniFi Protect backup tool with rsync.net support"
license = "MIT"
repository = "https://gitlab.stephensampson.dev/homelab/unifi-protect-backup"

[dependencies]
unifi-protect-client.workspace = true
unifi-protect-data.workspace = true

chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive", "env"] }
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
toml.workspace = true
async-trait.workspace = true
native-tls.workspace = true

[dev-dependencies]
#tokio-test = "0.4"