[package]
name = "unifi-protect-backup"
version.workspace = true
edition.workspace = true
authors = ["Steve Sampson <mail@stephensampson.dev>"]
description = "Rust-based UniFi Protect backup tool with rsync.net support"
license = "MIT"
repository = "https://gitlab.stephensampson.dev/homelab/unifi-protect-backup"

[dependencies]
async-trait.workspace = true
base64.workspace = true
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive", "env"] }
futures-util.workspace = true
humantime-serde.workspace = true
native-tls.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic"] }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
toml.workspace = true
tracing.workspace = true
tracing-core.workspace = true
tracing-loki.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
unifi-protect-client.workspace = true
unifi-protect-data.workspace = true

[dev-dependencies]

#tokio-test = "0.4"