[package]
name = "unifi-protect-client"
version = "0.1.0"
edition = "2024"
authors = ["Steve Sampson <mail@stephensampson.dev>"]
description = "Rust-based UniFi Protect backup tool with rsync.net support"
license = "MIT"
repository = "https://gitlab.stephensampson.dev/homelab/unifi-protect-backup"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive", "env"] }
futures-util = "0.3"
reqwest = { version = "0.12.22", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }
tempfile = "3.0"
thiserror = "2.0.12"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.0"
uuid = { version = "1.0", features = ["v4"] }
toml = "0.8.23"
async-trait = "0.1.88"
native-tls = "0.2.14"

[dev-dependencies]
tokio-test = "0.4"