[package]
name = "unifi-protect-client"
version.workspace = true
edition.workspace = true
authors = ["Steve Sampson <mail@stephensampson.dev>"]
description = "Rust-based UniFi Protect backup tool with rsync.net support"
license = "MIT"
repository = "https://gitlab.stephensampson.dev/homelab/unifi-protect-backup"

[dependencies]
arc-swap = "1.7.1"
chrono = { workspace = true, features = ["serde"] }
futures-util.workspace = true
native-tls.workspace = true
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true, features = ["native-tls"] }
toml.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]








#tokio-test = "0.4"