[package]
name = "unifi-protect-data"
version.workspace = true
edition.workspace = true
authors = ["Steve Sampson <mail@stephensampson.dev>"]
description = "Rust-based UniFi Protect backup tool with rsync.net support"
license = "MIT"
repository = "https://gitlab.stephensampson.dev/homelab/unifi-protect-backup"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }
thiserror.workspace = true

[dev-dependencies]
#tokio-test = "0.4"